# rust-randomkit

./: .travis.yml  Cargo.toml  LICENSE  LICENSE-RANDOMKIT  README.md  build.rs  index.html  search-index.js
examples/: basic.rs
implementors/core/clone/: trait.Clone.js
implementors/core/marker/: trait.Copy.js
implementors/randomkit/: trait.Sample.js
randomkit/: Makefile  index.html  sidebar-items.js  stability.html  stability.json  struct.Rng.html  trait.Sample.html
src/: dist.rs  ffi.rs  lib.rs
src/randomkit/: dist.rs.html  lib.rs.html
tests/: lib.rs
