[package]

name = "randomkit"
version = "0.1.0"
authors = ["David Stygstra <david.stygstra@gmail.com>"]
build = "build.rs"
readme = "README.md"
repository = "https://github.com/stygstra/rust-randomkit"
homepage = "https://github.com/stygstra/rust-randomkit"
description = """
`numpy.random` for Rust.
"""
keywords = ["random"]

[dependencies]
libc = "0.1"
