[package]

name = "randomkit"
version = "0.1.1"
authors = ["David Stygstra <david.stygstra@gmail.com>"]
license = "MIT/BSD-3-Clause"
build = "build.rs"
readme = "README.md"
repository = "https://github.com/stygstra/rust-randomkit"
documentation = "https://stygstra.github.io/rust-randomkit/"
homepage = "https://github.com/stygstra/rust-randomkit"
description = """
`numpy.random` for Rust.
"""
keywords = ["random"]

[dependencies]
libc = "0.2"
rand = "0.4.2"
